[workspace]
members = [
    "invoke",
    "test-program",
]
resolver = "2"

[workspace.package]
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/buffalojoec/invoke"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
bincode = "1.3.3"
serde = "1.0.210"
solana-bpf-loader-program = "2.0.11"
solana-compute-budget = "2.0.11"
solana-program = "2.0.11"
solana-program-runtime = "2.0.11"
solana-sdk = "2.0.11"
solana-type-overrides = "2.0.11"
solana_rbpf = "0.8.4"
