[package]
name = "solana-invoke"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-compute-budget = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-type-overrides = { workspace = true }
solana_rbpf = { workspace = true }
