[package]
name = "test-program"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-program = { workspace = true }

[dev-dependencies]
solana-compute-budget = { workspace = true }
solana-invoke = { path = "../invoke" }
solana-sdk = { workspace = true }
